Made styles more specific which should fix overflow-truncate class from hiding tooltips.

--- a/sass/modules/_universe.scss
+++ b/sass/modules/_universe.scss
@@ -2,7 +2,7 @@
   min-width: 50px
 }
 
-#universetable {
+#universetable [class*='col-'] {
   @include overflow-truncate();
 }
 
