--- a/sass/modules/header/_nav-top.scss
+++ b/sass/modules/header/_nav-top.scss
@@ -1,5 +1,8 @@
 #nav-top {
-  @include overflow-truncate();
+
+  & [class*='col-'] {
+    @include overflow-truncate();
+  }
 
   .btn {
     border-radius: 0;
